# routes/index.js
@@ -1,8 +1,15 @@
 const routes = require('express').Router();
-routes.use('/contacts', require('./recipe'));
 
-routes.get('/', (_req, res) => {
-  res.send('Jacob Terrellsss');
+const authCheck = (req, res, next) => {
+  if(!req.user){
+      res.redirect('/auth/home');
+  } else {
+      next();
+  }
+};
+
+routes.get('/', authCheck, (req, res) => {
+  res.render('home', { user: req.user });
 });
 routes.use('/api/recipeModel', require('../api/recipeModel'))
 routes.use('/recipes', require('./recipe'))
